# MeetingMoodTracker

./: .gitignore  AGENTS.md  README.md  agent-progress.txt  docker-compose.dev.yml  example.env  feature_list.json  init.sh  pyproject.toml
.agents/agents/: test-automator.toml
.agents/rules/: architecture.md  korean-developer-experience.md  pydantic.md
.agents/skills/: changelog-generator  gh-address-comments  gh-fix-ci
.agents/workflows/: new-api-endpoint.md  test-and-deploy.md
.codex/environments/: environment.toml
.github/agents/: product-owner.agent.md  ui-designer.agent.md
app/: main.py
app/config/: llm_env.py
app/runtime/: analyze.py  env_config.py
app/service/: analyze_service.py  emotion_service.py  llm_config_service.py  sentiment_service.py
app/types/: analyze_inspect.py  analyze_llm.py  emotion.py  llm_config.py  mood.py  rubric.py  sentiment.py
backend/: .dockerignore  README.md
docker/: Dockerfile.api
docs/: AGENT_CAPABILITY_CATALOG.md  AGENT_OPERATIONS_GUIDE.md  ARCHITECTURE.md  DESIGN.md  ENVIRONMENT_GUIDE.md  QUALITY_SCORE.md  copilot-harness-setup-guide.html
frontend/: Dockerfile.dev  README.md  index.html  package-lock.json  package.json
scripts/: evaluate_sentiment_with_judge.py  pre_commit_hook.sh  run_api.sh  run_ui.sh  setup_worktree.sh  sync_feature_issues.py  validate_capability_manifest.py
tests/: test_analyze.py  test_analyze_inspect.py  test_analyze_service.py  test_emotion_service.py  test_env_config.py  test_healthz.py  test_rubric_api.py  test_sentiment_service.py  test_sync_feature_issues.py
(+82 files in other folders)
